feat: add questions

--- a/3.DataTypes.md
+++ b/3.DataTypes.md
@@ -43,7 +43,11 @@ console.log(sym1 === sym2); // false
 
 #### 4. Как проверить тип переменной в JavaScript?
 
-Для проверки типа переменной используется оператор `typeof`.
+### Как проверить тип переменной в JavaScript? Все варианты
+
+#### 1. Оператор `typeof`
+
+Оператор `typeof` возвращает строку, указывающую тип операнда.
 
 ```javascript
 console.log(typeof 42); // 'number'
@@ -55,6 +59,68 @@ console.log(typeof Symbol('sym')); // 'symbol'
 console.log(typeof {}); // 'object'
 console.log(typeof function () {}); // 'function'
 ```
+
+#### 2. Оператор `instanceof`
+
+Оператор `instanceof` проверяет, является ли объект экземпляром определенного класса или функции-конструктора.
+
+```javascript
+console.log([] instanceof Array); // true
+console.log({} instanceof Object); // true
+console.log(function () {} instanceof Function); // true
+```
+
+#### 3. Метод `Array.isArray`
+
+Метод `Array.isArray` проверяет, является ли значение массивом.
+
+```javascript
+console.log(Array.isArray([])); // true
+console.log(Array.isArray({})); // false
+```
+
+#### 4. Метод `Object.prototype.toString`
+
+Метод `Object.prototype.toString` возвращает строку, представляющую объект. Этот метод полезен для проверки типов объектов, таких как массивы и даты.
+
+```javascript
+console.log(Object.prototype.toString.call([])); // '[object Array]'
+console.log(Object.prototype.toString.call({})); // '[object Object]'
+console.log(Object.prototype.toString.call(new Date())); // '[object Date]'
+console.log(Object.prototype.toString.call(null)); // '[object Null]'
+console.log(Object.prototype.toString.call(undefined)); // '[object Undefined]'
+console.log(Object.prototype.toString.call(/regex/)); // '[object RegExp]'
+```
+
+#### 5. Конструктор объекта
+
+Можно проверить тип объекта, используя его конструктор.
+
+```javascript
+console.log({}.constructor === Object); // true
+console.log([].constructor === Array); // true
+console.log(function () {}.constructor === Function); // true
+```
+
+#### 6. Проверка на `null`
+
+Для проверки на `null` используется строгое равенство `===`.
+
+```javascript
+const value = null;
+console.log(value === null); // true
+```
+
+#### 7. Проверка на `NaN`
+
+Для проверки на `NaN` используется метод `Number.isNaN`.
+
+```javascript
+const value = NaN;
+console.log(Number.isNaN(value)); // true
+```
+
+Эти методы помогут вам определить тип переменной в JavaScript в различных ситуациях.
 
 #### 5. Что такое тип `bigint` и для чего он используется?
 
@@ -93,118 +159,4 @@ console.log(result); // NaN
 
 console.log(isNaN(result)); // true
 console.log(Number.isNaN(result)); // true
-```
-
-Эти вопросы и ответы помогут вам подготовиться к собеседованию, связанному с типами данных в JavaScript.
-
-### Сохранение в файл
-
-````markdown
-# JavaScript Data Types: Interview Questions and Answers
-
-## 1. Какие типы данных существуют в JavaScript?
-
-В JavaScript существует 7 примитивных типов данных и один объектный тип:
-
-- **Примитивные типы:**
-
-  - `undefined`
-  - `null`
-  - `boolean`
-  - `number`
-  - `string`
-  - `symbol`
-  - `bigint`
-
-- **Объектный тип:**
-  - `object`
-
-## 2. В чем разница между `undefined` и `null`?
-
-- **`undefined`**: Переменная объявлена, но не инициализирована значением.
-- **`null`**: Явное отсутствие значения.
-
-```javascript
-let a;
-console.log(a); // undefined
-
-let b = null;
-console.log(b); // null
-```
-````
-
-## 3. Что такое тип `symbol` и для чего он используется?
-
-`symbol` — это уникальный и неизменяемый тип данных, который часто используется для создания уникальных идентификаторов для свойств объектов.
-
-```javascript
-const sym1 = Symbol('description');
-const sym2 = Symbol('description');
-
-console.log(sym1 === sym2); // false
-```
-
-## 4. Как проверить тип переменной в JavaScript?
-
-Для проверки типа переменной используется оператор `typeof`.
-
-```javascript
-console.log(typeof 42); // 'number'
-console.log(typeof 'hello'); // 'string'
-console.log(typeof true); // 'boolean'
-console.log(typeof undefined); // 'undefined'
-console.log(typeof null); // 'object' (это историческая ошибка в JavaScript)
-console.log(typeof Symbol('sym')); // 'symbol'
-console.log(typeof {}); // 'object'
-console.log(typeof function () {}); // 'function'
-```
-
-## 5. Что такое тип `bigint` и для чего он используется?
-
-`bigint` — это тип данных, который используется для представления целых чисел произвольной точности. Он позволяет работать с числами, которые выходят за пределы безопасного диапазона чисел `number`.
-
-```javascript
-const bigInt = 1234567890123456789012345678901234567890n;
-console.log(bigInt); // 1234567890123456789012345678901234567890n
-```
-
-## 6. Как преобразовать строку в число и наоборот?
-
-- **Преобразование строки в число:**
-
-```javascript
-const str = '123';
-const num = Number(str);
-console.log(num); // 123
-```
-
-- **Преобразование числа в строку:**
-
-```javascript
-const num = 123;
-const str = String(num);
-console.log(str); // '123'
-```
-
-## 7. Что такое NaN и как проверить, является ли значение NaN?
-
-`NaN` (Not-a-Number) — это значение, которое указывает, что результат операции не является числом.
-
-```javascript
-const result = 'abc' / 2;
-console.log(result); // NaN
-
-console.log(isNaN(result)); // true
-console.log(Number.isNaN(result)); // true
-```
-
-Эти вопросы и ответы помогут вам подготовиться к собеседованию, связанному с типами данных в JavaScript.
-
-```
-
-Этот текст можно сохранить в файл
-
-3.DataTypes.md
-
-.
 ```
